# MyRPG

./: .gitignore  BUILD.style  Cards.md  CharacterCreation.md  README.md  Skills.md  WORKSPACE  class_types.md  diagram.md  mechanics.md
.circleci/: config.yml
Setting/: aether_magic.md
Setting/Setting 1; Nerris/: A History of Arkon and the Establishment of Stability in Nerris.md  The City of Arkon.md  The City of Sareal.md  The Southern Peninsula.md
card_maker/: BUILD.bazel  WORKSPACE  cards.bzl
card_maker/src/card_maker/assets/: BUILD.bazel  cards.yml  default.html  monsters.html  monsters.yml  playable.html  playable.yml
card_maker/src/card_maker/cardgenerator/: BUILD.bazel  card_maker.go  cost_drawer.go  cost_parser.go  utils.go
card_maker/src/card_maker/cmd/: BUILD.bazel  card_maker.go  cost_drawer.go  cost_parser.go  monster_cards.go  playable_cards.go
cards/: martin_cards_1.csv  mechanic_ideas.md  option_1_cards.md
gocode/: BUILD.bazel
gocode/src/card_maker/assets/: BUILD.bazel  cards.yml  default.html
gocode/src/card_maker/cmd/: BUILD.bazel  card_maker.go
handbook/: BUILD.bazel  main.tex
image_maker/: default.html.j2  make_card.py  make_gem.py  styles.css
player/: beads.py  beads_test.py  cards.py  cards_test.py  cost_parser.py  cost_parser_test.py  costs.py  elements.py  helpers.py  player.py  player_test.py  requirements.txt
rules/: BUILD.bazel  BasicMoves.md  Cards.md  class_types.md  mechanics.md
