load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar", "pkg_deb")

pkg_tar(
    name = "card_maker",
    extension = "tar.gz",
    # strip_prefix = "src/card_maker/cmd",
    # package_dir = "/usr/local/bin",
    srcs = [
        "//src/card_maker/cmd:card_maker",
        "//src/card_maker/assets:card_maker_assets",
    ],
    mode = "0755",
)