load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(":cards.bzl", "gen_cards")

gen_cards(
    name = "playable",
    exe = "//card_maker/src/card_maker/cmd:card_maker",
    srcs = "//card_maker/src/card_maker/assets:playable_cards",
    template = "//card_maker/src/card_maker/assets:playable_card_template",
    out = "playable.html",
)

gen_cards(
    name = "monsters",
    exe = "//card_maker/src/card_maker/cmd:monster_maker",
    srcs = "//card_maker/src/card_maker/assets:monster_cards",
    template = "//card_maker/src/card_maker/assets:monster_card_template",
    out = "monsters.html",
)

pkg_tar(
    name = "card_maker",
    extension = "tgz",
    srcs = [
        "//card_maker/src/card_maker/cmd:card_maker",
        "//card_maker/src/card_maker/assets:card_maker_assets",
    ],
    mode = "0755",
)
