load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar", "pkg_deb")

pkg_tar(
    name = "card_maker_" + select({
      "@bazel_tools//src/conditions:windows": "windows_amd64",
      "@bazel_tools//src/conditions:darwin": "darwin_amd64",
      "@bazel_tools//src/conditions:linux": "linux_amd64",
      "//conditions:default": ""})

    extension = "tar.gz",
    srcs = [
        "//src/card_maker/cmd:card_maker",
        "//src/card_maker/assets:card_maker_assets",
    ],
    mode = "0755",
)
