filegroup(
    name = "playable_cards",
    visibility = ["//visibility:public"],
    srcs = [
        "playable.yml",
    ],
)

filegroup(
    name = "playable_card_template",
    visibility = ["//visibility:public"],
    srcs = [
        "playable.html",
    ],
)

filegroup(
    name = "card_maker_assets",
    visibility = ["//visibility:public"],
    srcs = [
        ":playable_cards",
        ":playable_card_template",
    ],
)

filegroup(
    name = "monster_cards",
    visibility = ["//visibility:public"],
    srcs = [
        "monsters.yml",
    ],
)

filegroup(
    name = "monster_card_template",
    visibility = ["//visibility:public"],
    srcs = [
        "monsters.html",
    ],
)

filegroup(
    name = "monster_maker_assets",
    visibility = ["//visibility:public"],
    srcs = [
        ":monster_cards",
        ":monster_card_template",
    ],
)