load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cardgenerator",
    srcs = [
        "utils.go",
        "cost_drawer.go",
        "cost_parser.go",
        "card_maker.go",
    ],
    importpath = "cardgenerator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ajstarks_svgo//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

