load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "card_maker",
    deps = [
        "//card_maker/src/card_maker/cardgenerator:cardgenerator",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
    srcs = [
        "playable_cards.go",
    ],
    visibility = ["//visibility:public"],
    data = [
        "//card_maker/src/card_maker/assets:card_maker_assets"
    ]
)

go_binary(
    name = "monster_maker",
    deps = [
        "//card_maker/src/card_maker/cardgenerator:cardgenerator",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
    srcs = [
        "monster_cards.go",
    ],
    visibility = ["//visibility:public"],
    data = [
        "//card_maker/src/card_maker/assets:monster_maker_assets"
    ]
)