load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["card_maker.go"],
    importpath = "github.com/example/project/src/card_maker/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ajstarks_svgo//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "card_maker",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    data = [
      "//src/card_maker/assets:card_maker_assets"
    ]
)
